# automatic-coder

./: .gitignore  .npmrc  .prettierignore  AGENTS.md  CLAUDE.md  README.md  activation.html  biome.json  components.json  eslint.config.js  host.html  index.html  justfile  latest.json  openai.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  revocations.json  select.html  tsconfig.json  tsconfig.node.json  vite.activation.config.ts  vite.config.ts  vite.host.config.ts  vite.openai.config.ts  vite.select.config.ts
.config/: dotnet-tools.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
.husky/: pre-commit  pre-push
.zed/: select.html  select.js  select.ts
docs/: 笔试软件用户使用教程.md
scripts/: crypto.ts  publish.ts  publish_macos.ts  publish_windows.ts  refreshActivationCodes.ts  release.ts  tauri-build.ts  upload_latest_json.ts
src/: App.css  App.tsx  activation.ts  host.ts  openai.ts  select.ts
src-tauri/: .gitignore  .taurignore  Cargo.toml  Entitlements.plist  activation_codes_client.txt  build.rs  entirlements.plist  revocations.json  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  desktop.json
src-tauri/enc/: activation_codes.enc  activation_codes.json
src-tauri/icons/: icon.icns
src-tauri/license_manager/: Cargo.toml
src-tauri/license_manager/src/: lib.rs
src-tauri/src/: capture.rs  config.rs  lan.rs  lib.rs  license.rs  main.rs  system.rs  utils.rs  vlm.rs
src/assets/: constant.ts
src/components/: AudoUpdater.tsx  MarkdownEditor.tsx  MarkdownPreview.tsx
src/lib/: logger.ts  shortcut.ts  system.ts  vlm.ts
src/lib/components/: MarkdownPreview.tsx
src/lib/components/ui/: context-menu.tsx  sonner.tsx  tooltip.tsx
src/pages/: Index.tsx  NotFound.tsx  UpdateWindow.tsx
src/services/: update.ts
src/store/: index.ts
