[package]
name = "interview-coder"
version = "0.1.2"
description = "A Tauri App for interview coder"
authors = ["Superwindclou <<117893440@qq.com>>"]
edition = "2021"

[workspace]
members = ["license_manager"]


[lib]
name = "interview_coder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon" ,"devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.6.0"
image = "0.25.8"
confy = "1.0.0"
xcap = "0.7.1"
fs_extra = "1.3.0"
reqwest = { version = "0.12.23", features = ["json"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
base64 = "0.22.1"
dirs = "6.0.0"
license_manager = { path = "license_manager" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
