[package]
name = "interview-coder"
version = "0.1.3"
description = "A Tauri App for interview coder"
authors = ["Superwindclou <<117893440@qq.com>>"]
edition = "2021"

[workspace]
members = ["license_manager"]


[lib]
name = "interview_coder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon" ,"devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25.8"
confy = "2.0.0"
xcap = "0.7.1"
fs_extra = "1.3.0"
reqwest = { version = "0.12.24", features = ["json", "multipart"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
base64 = "0.22.1"
dirs = "6.0.0"
sha2 = "0.10"
whoami = "1.6"
license_manager = { path = "license_manager" }
tempfile = "3.23.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"



