[package]
name = "interview-coder"
version = "1.0.11"
description = "A Tauri App for interview coder"
authors = ["Superwindcloud <<117893440@qq.com>>"]
edition = "2024"
rust-version = "1.94.0"


[workspace]
members = ["license_manager"]


[lib]
name = "interview_coder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25.10"
confy = "2.0.0"
xcap = "0.9.2"
fs_extra = "1.3.0"
reqwest = { version = "0.13.2", features = ["json", "multipart"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
base64 = "0.22.1"
dirs = "6.0.0"
sha2 = "0.10.9"
whoami = "2.1.1"
license_manager = { path = "license_manager" }
tempfile = "3.27.0"
tauri-plugin-notification = "2"
tauri-plugin-log = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"

[profile.dev]
debug = 0

#最快编译时间
[profile.release]
lto = false
codegen-units = 256
panic = "abort"
debug = 0

# 最快运行性能
[profile.perf]
inherits = "release"
opt-level = 3
debug = false
strip = "none"
lto = true
codegen-units = 1
incremental = false
panic = "abort"

# 最小二进制
[profile.minsize]
inherits = "release"
opt-level = "z"
debug = false
strip = true
lto = true
codegen-units = 1
incremental = false
panic = "abort"
