[package]
name = "license_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = { version = "0.10", features = ["aes"] }
base64 = "0.22"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
hex = "0.4"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
thiserror = "2.0.18"
dotenv = "0.15.0"
